kustomize/manifests/kubeflow/1.3/overlays/compute-xowz/common/istio-1-9-0/istio-install/base/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: 'kubeflow.compute-xowz.network-xowz.neuralnetes.com.'
spec:
  type: LoadBalancer
