kustomize/manifests/kubeflow/1.3/overlays/compute-xowz/common/istio-1-9-0/istio-install/base/patch-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingressgateway
spec:
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - 'kubeflow.{KUBEFLOW_PROJECT}.network-xowz.neuralnetes.com'
    tls:
      httpsRedirect: true # sends 301 redirect for http requests
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: istio-certs
    hosts:
    - 'kubeflow.{KUBEFLOW_PROJECT}.network-xowz.neuralnetes.com'
